--- a/src/main/resources/templates/menu/enrollMenuForm.html
+++ b/src/main/resources/templates/menu/enrollMenuForm.html
@@ -22,14 +22,15 @@
             <input class="" placeholder="설명을 입력하세요" th:field="${menu.intro}" type="text">
         </div>
         <div class="">
-            <label th:for="author"></label>
-            <input class="form-control" placeholder="저자를 입력하세요" th:field="*{author}"
+            <label></label>
+            <input class="form-control" placeholder="타입을 하세요" th:field="*{menu.}"
                    type="text">
         </div>
 
         <button class="" type="submit">Submit</button>
     </form>
     <br/>
+
 </div> <!-- /container -->
 </body>
 </html>
