--- a/src/main/resources/templates/menu/enrollMenuForm.html
+++ b/src/main/resources/templates/menu/enrollMenuForm.html
@@ -22,9 +22,7 @@
             <input class="" placeholder="설명을 입력하세요" th:field="${menu.intro}" type="text">
         </div>
         <div class="">
-            <label></label>
-            <input class="form-control" placeholder="타입을 하세요" th:field="*{menu.}"
-                   type="text">
+            셀렉트 박스
         </div>
 
         <button class="" type="submit">Submit</button>
