--- a/src/main/resources/templates/user/enrollUser.html
+++ b/src/main/resources/templates/user/enrollUser.html
@@ -10,28 +10,28 @@
     <form method="post" role="form" th:action="@{/user/enroll}" th:object="${user}">
         <!--th:object -> 이 안에서 이객체를 계속사용하겠다-->
         <div class="">
-            <label th:for="name">이름</label>
+            <label>이름</label>
             <input class="" placeholder="이름을 입력하세요"
                    th:field="${user.name}"
                    type="text">
         </div>
         <div class="">
-            <label th:for="id">아이디</label>
+            <label>아이디</label>
             <input class="" placeholder="아이디를 입력하세요" th:field="${user.loginId}"
                    type="text">
         </div>
         <div class="">
-            <label th:for="pwd">비밀번호</label>
+            <label>비밀번호</label>
             <input class="" placeholder="비밀번호를 입력하세요" th:field="${user.loginPwd}"
                    type="password">
         </div>
         <div class="">
-            <label th:for="phoneNumber">전화번호</label>
+            <label>전화번호</label>
             <input class="" placeholder="전화번호를 입력하세요" th:field="${user.phoneNumber}"
                    type="text">
         </div>
         <div class="">
-            <label th:for="email">이메일</label>
+            <label>이메일</label>
             <input class="" placeholder="이메일을 입력하세요" th:field="${user.email}"
                    type="text">
         </div>
