23-05-04 화면 만드는중

--- a/src/main/resources/templates/reservation/reservationDate.html
+++ b/src/main/resources/templates/reservation/reservationDate.html
@@ -21,11 +21,11 @@
                    type="date">
         </div>
 
-        <!--        <div class="">-->
-        <!--            <label>시간</label>-->
-        <!--            <input class=""-->
-        <!--                   placeholder="시간" th:field="${reservation.time}" type="text">-->
-        <!--        </div>-->
+        <div class="">
+            <label>시간</label>
+            <input class=""
+                   placeholder="시간" th:field="${reservation.time}" type="time">
+        </div>
 
         <button class="" type="submit">확인</button>
     </form>
