23-05-05 화면 만드는중

--- a/src/main/resources/templates/reservation/reservationTable.html
+++ b/src/main/resources/templates/reservation/reservationTable.html
@@ -13,7 +13,7 @@
             <label>인원수</label>
             <input class="" hidden
                    placeholder="인원수을 입력하세요"
-                   th:field="${reservation.first}" type="text">
+                   th:field="${reservation.members}" type="num">
         </div>
         <div class="">
             <label>날짜</label>
