--- a/src/main/resources/templates/reservation/reservationDate.html
+++ b/src/main/resources/templates/reservation/reservationDate.html
@@ -23,9 +23,22 @@
 
         <div class="">
             <label>시간</label>
-            <input class=""
-                   placeholder="시간" th:field="${reservation.time}" type="time">
-        </div>
+            <select id="time" name="time">
+                <option>시간 선택</option>
+                <option value="08:00:00">08 : 00</option>
+                <option value="09:00:00">09 : 00</option>
+                <option value="10:00:00">10 : 00</option>
+                <option value="11:00:00">11 : 00</option>
+                <option value="12:00:00">12 : 00</option>
+                <option value="13:00:00">13 : 00</option>
+                <option value="14:00:00">14 : 00</option>
+                <option value="15:00:00">15 : 00</option>
+                <option value="16:00:00">16 : 00</option>
+                <option value="17:00:00">17 : 00</option>
+                <option value="18:00:00">18 : 00</option>
+                <option value="19:00:00">19 : 00</option>
+                <option value="20:00:00">20 : 00</option>
+            </select>
 
         <button class="" type="submit">확인</button>
     </form>
