--- a/src/main/resources/templates/reservation/reservationInfo.html
+++ b/src/main/resources/templates/reservation/reservationInfo.html
@@ -10,7 +10,7 @@
 <br>
 <h2 th:text="${reservation.members}"></h2>
 <h2 th:text="${reservation.date}"></h2>
-<!--<h2 th:text="${reservation.time}"></h2>-->
+<h2 th:text="${reservation.time}"></h2>
 <!--<h2 th:text="${reservation.fourth}"></h2>-->
 <!--<h2 th:text="${reservation.fifth}"></h2>-->
 <!--<h2 th:text="${reservation.sixth}"></h2>-->
