23-05-06 화면 만드는중

--- a/src/main/resources/templates/reservation/reservationInfo.html
+++ b/src/main/resources/templates/reservation/reservationInfo.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" xmlns:th="http://www.thymeleaf.org">
     <title>Title</title>
 </head>
 <body>
 
-<h1>check</h1>
-<br>
-<h2 th:text="${reservation.members}"></h2>
-<h2 th:text="${reservation.date}"></h2>
-<h2 th:text="${reservation.time}"></h2>
-<!--<h2 th:text="${reservation.fourth}"></h2>-->
-<!--<h2 th:text="${reservation.fifth}"></h2>-->
-<!--<h2 th:text="${reservation.sixth}"></h2>-->
+<h1>4. 예약 명세서 페이지</h1>
+<div>
+
+    <button class="" th:action="" type="submit">확인</button>
+</div>
+
 </body>
 </html>
