--- a/src/main/resources/templates/reservation/reservationDate.html
+++ b/src/main/resources/templates/reservation/reservationDate.html
@@ -5,9 +5,9 @@
     <title>Title</title>
 </head>
 <body>
-<h1>날짜 체크</h1>
+<h1>1. 날짜 , 인원수 페이지</h1>
 <div>
-    <form method="post" role="form" th:action="@{/reservation/date}" th:object="${reservation}">
+    <form method="post" role="form" th:action="@{/reservation/table}" th:object="${reservation}">
         <div class="">
             <label>인원수</label>
             <input class="" placeholder="인원수을 입력하세요"
@@ -40,8 +40,10 @@
                 <option value="20:00:00">20 : 00</option>
             </select>
 
-        <button class="" type="submit">확인</button>
+            <button class="" type="submit">확인</button>
+        </div>
     </form>
+
 </div>
 
 </body>
