--- a/src/main/resources/templates/reservation/reservationTable.html
+++ b/src/main/resources/templates/reservation/reservationTable.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" xmlns:th="http://www.thymeleaf.org">
     <title>Title</title>
 </head>
 <body>
@@ -11,27 +11,21 @@
         <!--th:object -> 이 안에서 이객체를 계속사용하겠다-->
         <div class="">
             <label>인원수</label>
-            <input class="" hidden
-                   placeholder="인원수을 입력하세요"
-                   th:field="${reservation.members}" type="num">
+
         </div>
         <div class="">
             <label>날짜</label>
-            <input class="" hidden placeholder="날짜를 입력하세요"
-                   th:field="${reservation.second}" type="text">
+
         </div>
 
         <div class="">
             <label>이름</label>
-            <input class=""
-                   hidden
-                   placeholder="시간" th:field="${reservation.third}" type="text">
+
         </div>
 
         <div class="">
             <label>테이블 번호</label>
-            <input class="" placeholder="테이블 번호"
-                   th:field="${reservation.fourth}" type="text">
+
         </div>
 
         <button class="" type="submit">확인</button>
