--- a/src/main/resources/template/main.html
+++ b/src/main/resources/template/main.html
@@ -3,7 +3,7 @@
 <html>
     <head>
         <link href="main.css" rel="stylesheet" type="text/css" />
-        <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&family=Merriweather+Sans:wght@500&display=swap" rel="stylesheet">
         <title> Restaurant main </title>
     </head>
     <body>
@@ -21,9 +21,11 @@
                 <li><a href="">SING-UP</a></li>
             </ul>
         </nav>
-        <div class="main_img">
-            <img src="img/restaurant2.jpg" alt="main_img" width="100%">
-            <h1 class="main_img_text">Welcome to our restaurant!</h1>
-        </div>
+        <section>
+            <div class="main_img">
+                <img src="img/restaurant2.jpg" alt="main_img" width="100%">
+                <h1 class="main_img_text">Welcome to our restaurant!</h1>
+            </div>
+        </section>
     </body>
 </html>
