23-05-07 reservation 화면 table number로 되어있다??

--- a/src/main/resources/templates/customer/registerForm.html
+++ b/src/main/resources/templates/customer/registerForm.html
@@ -7,7 +7,7 @@
 <body>
 <h1>customer 회원가입</h1>
 <div>
-    <form method="post" th:action="@{/customer/register}" th:object="${customer}">
+    <form method="post" th:action="@{/customer/enroll}" th:object="${customer}">
         <div>
             <label for="loginId">Login ID:</label>
             <input id="loginId" th:field="*{loginId}" type="text"/>
