--- a/src/main/resources/templates/mainPage.html
+++ b/src/main/resources/templates/mainPage.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" th="http://www.thymeleaf.org">
     <title>Title</title>
 </head>
 <body>
 
 <h1>MainPage</h1>
+<div>
+    <a class="" th:href="@{customer/register}">회원 가입</a>
+</div>
 
+<div>
+    <a class="" th:href="@{reservation/date}">예약</a>
+</div>
 </body>
 </html>
