--- a/src/main/resources/templates/reservation/reservationMenu.html
+++ b/src/main/resources/templates/reservation/reservationMenu.html
@@ -8,28 +8,34 @@
 <h1>3. 메뉴 선택 페이지</h1>
 
 <div>
-    <form method="post" role="form" th:action="@{/reservation/menu}" th:object="${reservation}">
+    <form method="post" role="form" th:action="@{/reservation/Info}" th:object="${reservation}">
         <div class="">
-            <label>인원수 - hidden</label>
+            <!--            <label>인원수 - hidden</label>-->
             <input th:field="*{members}" type="hidden"/>
         </div>
         <div class="">
-            <label>날짜 -hidden</label>
+            <!--            <label>날짜 -hidden</label>-->
             <input th:field="*{date}" type="hidden"/>
         </div>
 
         <div class="">
-            <label>시간 -hidden</label>
+            <!--            <label>시간 -hidden</label>-->
             <input th:field="*{time}" type="hidden"/>
         </div>
 
         <div class="">
-            <label>선택 table 번호 -hidden</label>
-            <input th:field="*{tableNumber}" type="hidden"/>
-
+            <!--            <label>선택 table 번호 -hidden</label>-->
+            <input th:field="*{tid}" type="hidden"/>
         </div>
         <div>
-            <label>메뉴 선택</label>
+            <!--            <label>메뉴 선택</label>-->
+            <div th:each="menu : ${menuList}">
+                <label>
+                    <input th:field="*{orderMenuList}" th:text="${menu.name}" th:value="${menu.mid}"
+                           type="checkbox"/>
+                    <span th:text="${menu.price}"></span>
+                </label>
+            </div>
         </div>
         <button class="" type="submit">확인</button>
     </form>
