--- a/src/main/resources/templates/mainPage.html
+++ b/src/main/resources/templates/mainPage.html
@@ -5,12 +5,13 @@
     <title>Title</title>
 </head>
 <body>
-
 <h1>MainPage</h1>
 <div>
     <a class="" th:href="@{customer/register}">회원 가입</a>
 </div>
-
+<div>
+    <a class="" th:href="@{login/login}">로그인</a>
+</div>
 <div>
     <a class="" th:href="@{reservation/date}">예약</a>
 </div>
