--- a/src/main/resources/templates/reservation/reservationInfo.html
+++ b/src/main/resources/templates/reservation/reservationInfo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" xmlns:th="http://www.thymeleaf.org">
+    <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
@@ -9,7 +9,6 @@
 <h1>4. 예약 명세서 페이지</h1>
 <div>
 
-    <button class="" th:action="" type="submit">확인</button>
 </div>
 
 </body>
