--- a/src/main/resources/template/main.html
+++ b/src/main/resources/template/main.html
@@ -29,17 +29,13 @@
                 <h2></h2>
             </div>
         </div>
-        <div id="main_About">
-            <h1>About</h1>
-            <p class="introduce">
-                "SWEB"
-                <p>SoftWare-Engineering B팀의 의미입니다.</p> 
-            </p>
-            <!-- <section>
-                <div class="map">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3173.774022085336!2d127.03325807592671!3d37.30048923933902!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357b5c9c1e337b5b%3A0x437f7735e290ec4d!2z6rK96riw64yA7ZWZ6rWQ!5e0!3m2!1sko!2skr!4v1683383370406!5m2!1sko!2skr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <section class="mainsite_section" id="main_About">
+            <div class="About_header">
+                <div class="About_text_center">
+                    <h2>About</h2>
+                    <p>'SWEB' 은 Software-Engineering B팀........</p>
                 </div>
-            </section> -->
-        </div>
+            </div>
+        </section>
     </body>
 </html>
