--- a/src/main/resources/template/main.html
+++ b/src/main/resources/template/main.html
@@ -16,8 +16,8 @@
                 </div>
                 <ul class="navbar_menu">
                     <li><a href="#main_About">About</a></li>
-                    <li><a href="">Menu</a></li>
-                    <li><a href="">Reservation</a></li>
+                    <li><a href="#main_Menu">Menu</a></li>
+                    <li><a href="#main_Reservation">Reservation</a></li>
                 </ul>
                 <ul class="navbar_member">
                     <li><a href="">LOG-IN</a></li>
@@ -33,7 +33,31 @@
             <div class="About_header">
                 <div class="About_text_center">
                     <h2>About</h2>
-                    <p>'SWEB' 은 Software-Engineering B팀........</p>
+                    <p>'SWEB' 은 Software-Engineering B팀...</p>
+                </div>
+            </div>
+        </section>
+        <section class="mainsite_section" id="main_Menu">
+            <div class="Menu_header">
+                <div class="Menu_text_center">
+                    <h2>Menu</h2>
+                    <p>...................</p>
+                </div>
+            </div>
+        </section>
+        <section class="mainsite_section" id="main_Reservation">
+            <div class="Reservation_header">
+                <div class="Reservation_text_center">
+                    <h2>Reservation</h2>
+                    <p>...................</p>
+                </div>
+            </div>
+        </section>
+        <section class="mainsite_section" id="main_Location">
+            <div class="Location_header">
+                <div class="Location_text_center">
+                    <h2>Location</h2>
+                    <p>...................</p>
                 </div>
             </div>
         </section>
