스크롤 내릴 때 메뉴바 같이 내려오기

--- a/src/main/resources/template/main.html
+++ b/src/main/resources/template/main.html
@@ -17,6 +17,8 @@
                     <li><a href="#main_About">About</a></li>
                     <li><a href="#main_Menu">Menu</a></li>
                     <li><a href="#main_Reservation">Reservation</a></li>
+                    <li><a href="#main_Location">Location</a></li>
+
                 </ul>
                 <ul class="navbar_member">
                     <li><a href="">LOG-IN</a></li>
