--- a/src/main/resources/template/main.css
+++ b/src/main/resources/template/main.css
@@ -1,3 +1,6 @@
+html{
+    scroll-behavior: smooth;
+}
 body{
     margin: 0;
 }
@@ -18,6 +21,10 @@ a{
     align-items: center;
     justify-content: space-between;
     padding: 8px 12px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
 }
 
 .navbar_menu{
