23-05-08 주문 상품.. 실패

--- a/src/main/resources/templates/admin/addMenuForm.html
+++ b/src/main/resources/templates/admin/addMenuForm.html
@@ -5,7 +5,10 @@
     <title>Title</title>
 </head>
 <body>
+
 <div class="container">
+    <div th:replace="~{fragments/bodyHeader :: bodyHeader}"/>
+    
     <form method="post" th:action="@{/admin/addMenu}" th:object="${menu}">
         <div class="">
             <label>상품명</label>
