--- a/src/main/resources/templates/admin/adminMainPage.html
+++ b/src/main/resources/templates/admin/adminMainPage.html
@@ -6,5 +6,10 @@
 </head>
 <body>
 <h1>admin Main Page</h1>
+
+<div th:replace="~{fragments/bodyHeader :: bodyHeader}"/>
+<div>
+    
+</div>
 </body>
 </html>
