--- a/src/main/resources/templates/customer/editForm.html
+++ b/src/main/resources/templates/customer/editForm.html
@@ -5,6 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-
+<h1>수정 Page</h1>
+<div th:replace="~{fragments/bodyHeader :: bodyHeader}"/>
 </body>
 </html>
