--- a/src/main/resources/templates/reservation/reservationTable.html
+++ b/src/main/resources/templates/reservation/reservationTable.html
@@ -5,8 +5,8 @@
     <title>Title</title>
 </head>
 <body>
+<div th:replace="~{fragments/bodyHeader :: bodyHeader}"/>
 <h1>2. 테이블 선택 </h1>
-
 <div>
     <form method="post" role="form" th:action="@{/reservation/menu}" th:object="${reservation}">
         <!--th:object -> 이 안에서 이객체를 계속사용하겠다-->
