23-05-09 AppUser로 userType을 올리려고 한다.

--- a/src/main/resources/templates/login/loginPage.html
+++ b/src/main/resources/templates/login/loginPage.html
@@ -10,10 +10,10 @@
 <div>
     <form method="post" th:action="@{/login/login}">
         <label for="loginId">Id:</label>
-        <input id="loginId" name="loginId" type="text"/>
+        <input id="loginId" name="loginId" required type="text"/>
         <br/>
         <label for="loginPwd">Password:</label>
-        <input id="loginPwd" name="loginPwd" type="password"/>
+        <input id="loginPwd" name="loginPwd" required type="password"/>
         <br/>
         <button type="submit">Submit</button>
     </form>
