--- a/src/main/resources/templates/admin/addTable.html
+++ b/src/main/resources/templates/admin/addTable.html
@@ -7,7 +7,7 @@
 <body>
 
 <div>
-    <form action="#" method="post" th:object="${table}">
+    <form method="post" th:action="@{table}" th:object="${table}">
         <div>
             <label for="number">Number:</label>
             <input id="number" required th:field="*{number}" type="number">
