--- a/src/main/resources/templates/admin/adminMainPage.html
+++ b/src/main/resources/templates/admin/adminMainPage.html
@@ -6,5 +6,16 @@
 </head>
 <body>
 <h1>admin Main Page</h1>
+
+<div>
+    <a class="" th:href="@{table}">테이블 추가</a>
+</div>
+<div>
+    <a class="" th:href="@{menu}">메뉴 추가</a>
+
+</div>
+<div>
+    <a class="" th:href="@{reservation}">예약 현황</a>
+</div>
 </body>
 </html>
