23-05-10 Ordermenu 구현 하지만 문제가 있어보임

--- a/src/main/resources/templates/reservation/reservationDate.html
+++ b/src/main/resources/templates/reservation/reservationDate.html
@@ -25,8 +25,8 @@
         <div class="">
             <label>시간</label>
             <select th:field="*{time}">
-                <option th:each="slot : ${T(rest.order.reservation.DefineEnum.TimeSlot).values()}"
-                        th:text="${slot.time}" th:value="${slot}"></option>
+                <option th:each="timeSlot : ${T(rest.order.reservation.DefineEnum.TimeSlot).values()}"
+                        th:text="${timeSlot.detail}" th:value="${timeSlot}"></option>
             </select>
 
 
