--- a/src/main/resources/templates/user/loginPage.html
+++ b/src/main/resources/templates/user/loginPage.html
@@ -3,19 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="loginPage.css">
 </head>
 <body>
 <h1>"/user/login" 로그인 페이지</h1>
-<div>
-    <form method="post" th:action="@{/login/login}">
-        <label for="loginId">Id:</label>
-        <input id="loginId" name="loginId" required type="text"/>
-        <br/>
-        <label for="loginPwd">Password:</label>
-        <input id="loginPwd" name="loginPwd" required type="password"/>
-        <br/>
-        <button type="submit">Submit</button>
-    </form>
+<div class="wrap">
+    <div class="login">
+        <h2>Log-in</h2>
+        <form method="post" th:action="@{/login/login}">
+            <label for="loginId">Id</label>
+            <br>
+            <input id="loginId" name="loginId" required type="text"/>
+            <br/>
+            <label for="loginPwd">Password</label>
+            <br>
+            <input id="loginPwd" name="loginPwd" required type="password"/>
+            <br/>
+            <button type="submit">Submit</button>
+        </form>
+    </div>
 </div>
 </body>
 </html>
