loginPage signupPage 수정 // email 입력 부분 수정해야함

--- a/src/main/resources/templates/user/loginPage.html
+++ b/src/main/resources/templates/user/loginPage.html
@@ -2,11 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>"/user/login" 로그인 페이지</title>
     <link rel="stylesheet" href="loginPage.css">
 </head>
 <body>
-<h1>"/user/login" 로그인 페이지</h1>
 <div class="wrap">
     <div class="login">
         <h2>Log-in</h2>
