--- a/src/main/resources/templates/user/registerPage.html
+++ b/src/main/resources/templates/user/registerPage.html
@@ -2,39 +2,38 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Sing-up site</title>
     <link rel="stylesheet" href="resgisterPage.css">
 </head>
 <body>
-<h1> 회원가입</h1>
 <div class="wrap">
-    <div class="Sign-in">
-        <h2>Sign-in</h2>
+    <div class="Sign-up">
+        <h2>Sign-up</h2>
         <form method="post" required th:action="@{/user/register}" th:object="${user}">
             <div class="loginID">
-                <label for="loginId">Login ID:</label>
+                <label for="loginId">Login ID</label>
                 <br>
                 <input id="loginId" required th:field="*{loginId}" type="text"/>
             </div>
             <div class="loginPwd">
-                <label for="loginPwd">Login Password:</label>
+                <label for="loginPwd">Login Password</label>
                 <br>
                 <input id="loginPwd" required th:field="*{loginPwd}" type="password"/>
             </div>
             <div class="name">
-                <label for="name">Name:</label>
+                <label for="name">Name</label>
                 <br>
                 <input id="name" required th:field="*{name}" type="text"/>
             </div>
     
     
             <div class="phoneNumber">
-                <label for="phoneNumber">Phone Number:</label>
+                <label for="phoneNumber">Phone Number</label>
                 <br>
                 <input id="phoneNumber" th:field="*{phoneNumber}" type="text"/>
             </div>
             <div class="email">
-                <label for="email">Email:</label>
+                <label for="email">Email</label>
                 <br>
                 <input id="email" th:field="*{email}" type="text"/>
             </div>
