--- a/src/main/resources/templates/user/loginPage.css
+++ b/src/main/resources/templates/user/loginPage.css
@@ -10,7 +10,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background: rgba(0, 0, 0, 0.1);
+    background: rgb(150, 150, 150);
 }
 
 .login {
@@ -41,7 +41,7 @@ h2{
   
 .login input{
     width: 100%;
-    height: 50px;
+    height: 40px;
     border-radius: 30px;
     margin-top: 10px;
     margin-bottom: 30px;
@@ -51,7 +51,7 @@ h2{
 }
 
 .login label{
-    font-weight: bold;
+    font-size: 20px;
 }
 
 .login button{
