--- a/src/main/resources/templates/user/resgisterPage.css
+++ b/src/main/resources/templates/user/resgisterPage.css
@@ -10,11 +10,11 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background: rgba(0, 0, 0, 0.1);
+    background: rgb(150, 150, 150);
 }
-.Sign-in {
+.Sign-up {
     width: 30%;
-    height: 600px;
+    height: 700px;
     background: white;
     border-radius: 20px;
     display: flex;
@@ -25,6 +25,32 @@
 
 h2{
     font-size: 2em;
-    padding-bottom: 50px;
+    padding: 50px 0;
 }
 
+.Sign-up input{
+    width: 100%;
+    height: 30px;
+    border-radius: 30px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    padding: 0px 20px;
+    border: 1px solid lightgray;
+    outline: none;
+}
+
+.Sign-up button{
+    width: 100%;
+    height: 50px;
+    border: 0;
+    outline: none;
+    border-radius: 40px;
+    background: linear-gradient(to left, rgb(67, 63, 63), rgb(193, 190, 186));
+    color: white;
+    font-size: 1.2em;
+
+}
+
+.Sign-up label{
+    font-size: 15px;
+}
