--- a/src/main/resources/templates/fragments/bodyHeader.html
+++ b/src/main/resources/templates/fragments/bodyHeader.html
@@ -4,5 +4,5 @@
     <ul class="nav nav-pills pull-right">
         <li><a href="/">Home</a></li>
     </ul>
-    <a href="/"><h3 class="text-muted">HOME SHOP</h3></a>
+    <a href="/"><h3 class="text-muted">Restaurant Home</h3></a>
 </div>
