--- a/src/main/resources/templates/mainPage.html
+++ b/src/main/resources/templates/mainPage.html
@@ -12,8 +12,9 @@
 <div>
     <a class="" th:href="@{login/login}">로그인</a>
 </div>
-<div>
-    <a class="" th:href="@{reservation/date}">현장 예약</a>
-</div>
+<!--<div>-->
+<!--    <a class="" th:href="@{reservation/date}">현장 예약</a>-->
+<!--</div>-->
+
 </body>
 </html>
