--- a/src/main/resources/templates/admin/addMenuPage.html
+++ b/src/main/resources/templates/admin/addMenuPage.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" xmlns:th="http://www.thymeleaf.org">
     <title>Title</title>
 </head>
 <body>
+<h1>메뉴 추가</h1>
 <div class="container">
-    <form method="post" th:action="@{menu}" th:object="${menu}">
+    <form method="post" th:action="@{/admin/menu}" th:object="${menu}">
         <div class="">
             <label>상품명</label>
             <input class="" placeholder="상품명을 입력하세요" th:field="${menu.name}"
