--- a/src/main/resources/templates/admin/addTablePage.html
+++ b/src/main/resources/templates/admin/addTablePage.html
@@ -5,9 +5,9 @@
     <title>Title</title>
 </head>
 <body>
-
+<h1>테이블 추가</h1>
 <div>
-    <form method="post" th:action="@{table}" th:object="${table}">
+    <form method="post" th:action="@{/admin/table}" th:object="${table}">
         <div>
             <label for="number">Number:</label>
             <input id="number" required th:field="*{number}" type="number">
