--- a/src/main/resources/templates/admin/adminMainPage.html
+++ b/src/main/resources/templates/admin/adminMainPage.html
@@ -1,21 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
-<h1>admin Main Page</h1>
+<h1>관리자 페이지</h1>
 
 <div>
-    <a class="" th:href="@{table}">테이블 추가</a>
+    <a class="" th:href="@{/admin/table}">테이블 추가</a>
 </div>
 <div>
-    <a class="" th:href="@{menu}">메뉴 추가</a>
+    <a class="" th:href="@{/admin/menu}">메뉴 추가</a>
+</div>
 
-</div>
 <div>
-    <a class="" th:href="@{reservation}">예약 현황</a>
+    <a class="" th:href="@{/admin/reservationList}">예약 현황</a>
 </div>
+
+<div>
+    <a class="" th:href="@{/admin/customer}">고객 관리</a>
+</div>
+
 </body>
 </html>
