--- a/src/main/resources/templates/reservation/reservationDate.html
+++ b/src/main/resources/templates/reservation/reservationDate.html
@@ -8,7 +8,7 @@
 <h1>예약 페이지 1. 인원수 날짜 , 시간 페이지</h1>
 <div th:replace="~{fragments/bodyHeader :: bodyHeader}"/>
 <div>
-    <form method="post" role="form" th:action="@{table}" th:object="${reservation}">
+    <form method="post" role="form" th:action="@{/customer/{id}/table(id=${id})}" th:object="${reservation}">
         <div class="">
             <label>인원수</label>
             <input class="" placeholder="인원수을 입력하세요"
