--- a/src/main/resources/templates/user/loginPage.html
+++ b/src/main/resources/templates/user/loginPage.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<h1>"/user/login" 로그인 페이지</h1>
+<h1> 로그인 페이지</h1>
 <div>
     <form method="post" th:action="@{/login/login}">
         <label for="loginId">Id:</label>
