23-05-14 admin/reservationList 삭제버튼 ajax.done

--- a/src/main/resources/templates/admin/reservationList.html
+++ b/src/main/resources/templates/admin/reservationList.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
+
 <body>
 <h1>예약 현황</h1>
 
 <table class="">
     <thead>
     <tr>
+        <th>취소</th>
         <th>번호</th>
         <th>회원명</th>
         <th>날짜</th>
@@ -17,11 +20,59 @@
         <th>예약 인원 수</th>
         <th>테이블 번호</th>
         <th>주문 메뉴</th>
+
     </tr>
     </thead>
     <tbody>
+
+    <tr th:each="reservation : ${reservationList}">
+        <td>
+            <button class="deleteBtn" th:data-reservation-id="${reservation.reservationID}" type="button">
+                삭제
+            </button>
+        </td>
+        <td th:text="${reservation.reservationID}">번호</td>
+        <td th:text="${reservation.user.name}">회원명</td>
+        <td th:text="${reservation.dateSlot}">날짜</td>
+        <td th:text="${reservation.timeSlot.getDetail()}">시간</td>
+        <td th:text="${reservation.members}">예약 인원 수</td>
+        <td th:text="${reservation.tables.number}">테이블 번호</td>
+        <td>
+            <button class="btn btn-primary" data-target="#orderListModal" data-toggle="modal" type="button">
+                주문 리스트
+            </button>
+        </td>
+        <!--        <td th:text="${reservation.orderList}">주문 메뉴</td>-->
+
     </tbody>
+
 </table>
 
 </body>
 </html>
+<script>
+    $(document).ready(function () {
+        $(".deleteBtn").click(function () {
+            let reservationId = $(this).data("reservation-id");
+            if (window.confirm("예약을 삭제하시겠습니까?")) {
+                $.ajax({
+                    url: "/admin/reservation/delete/" + reservationId,
+                    method: "DELETE",
+                    // success: function (result) {
+                    //     alert("삭제완료 했습니다.")
+                    //     window.location.replace("@{admin/reservationList}")
+                    // },
+                    // error: function (xhr, status, error) {
+                    //     // 예약 삭제에 실패한 경우 처리할 내용
+                    //     alert("삭제 실패했습니다.")
+                    // }
+                }).done(function () {
+                    alert("삭제완료 했습니다.")
+                    window.location.href = '/admin/reservationList';
+                }).fail(function () {
+                    alert("삭제 실패했습니다.")
+                });
+            }
+        });
+    });
+</script>
