--- a/src/main/resources/templates/customer/editForm.html
+++ b/src/main/resources/templates/customer/editForm.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 <h1>수정 Page</h1>
-<div th:replace="~{fragments/bodyHeader :: bodyHeader}"/>
+<div th:replace="~{fragments/Header :: header}"/>
 </body>
 </html>
