--- a/src/main/resources/templates/reservation/reservationInfo.html
+++ b/src/main/resources/templates/reservation/reservationInfo.html
@@ -7,7 +7,7 @@
 <body>
 
 <h1>4. 예약 명세서 페이지</h1>
-<div th:replace="~{fragments/bodyHeader :: bodyHeader}"/>
+<div th:replace="~{fragments/Header :: Header}"/>
 <div>
 
 </div>
