--- a/src/main/resources/templates/reservation/reservationTable.html
+++ b/src/main/resources/templates/reservation/reservationTable.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<div th:replace="~{fragments/bodyHeader :: bodyHeader}"/>
+<div th:replace="~{fragments/Header :: Header}"/>
 <h1>2. 테이블 선택 </h1>
 <div>
     <form method="post" role="form" th:action="@{/customer/{id}/reserInfo(id=${id})}"
